--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [6.x, 8.x, 10.x]
+        node-version: [4.x, 5.x, 6.x, 7.x, 8.x, 9.x, 10.x, 11.x]
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
