regress only node 8, 10, 12, 13

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [8, 9, 10, 11, 12, 13]
+        node-version: [8, 10, 12, 13]
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
@@ -18,10 +18,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install, build, and test
+    - name: npm install and test
       run: |
         npm install
-        npm run build --if-present
         npm test
       env:
         CI: true
