--- a/package.json
+++ b/package.json
@@ -41,9 +41,13 @@
     "sax": "^1.2.1"
   },
   "eslintConfig": {
-    "extends": "@drom/eslint-config/eslint4/node4",
+    "extends": "@drom/eslint-config/eslint4/node8",
     "rules": {
-      "no-console": 1
+      "no-console": 1,
+      "indent": [
+        1,
+        4
+      ]
     }
   }
 }
