--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "onml",
   "version": "1.3.0",
   "description": "JSONML Library",
-  "main": "lib",
+  "main": "index.js",
   "scripts": {
-    "test": "eslint lib/*.js && nyc mocha",
-    "browserify": "browserify --standalone onml lib/index.js > build/onml.js",
+    "test": "eslint *.js && nyc mocha",
+    "browserify": "browserify --standalone onml index.js > build/onml.js",
     "prepublish": "npm run test && mkdir -p build && npm run browserify"
   },
   "files": [
     "build/onml.js",
-    "lib/*"
+    "*.js"
   ],
   "unpkg": "build/onml.js",
   "repository": {
